# BareMetalWeb

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTO_ID_GENERATION.md  BackgroundUsage.md  BareMetalWeb.csproj  BareMetalWeb.sln  CALCULATED_FIELDS_IMPLEMENTATION.md  CIMIGRATE_DEPLOYMENT.md  Directory.Build.props  Directory.Build.targets  Dockerfile  Dockerfile.agent  Dockerfile.prebuilt  Dockerfile.windows  Dockerfile.windows.prebuilt  ISSUE_LABELING_SUMMARY.md  ISSUE_QUICK_REFERENCE.md  LOOKUP_FIELD_BUTTONS_VISUAL.md  OWASP.md  README.MD  SECURITY.md  TESTING.md  TEST_ANALYSIS_INDEX.md  TEST_COVERAGE_SUMMARY.md  TEST_FAILURE_ROOT_CAUSE_ANALYSIS.md  TEST_FAILURE_SUMMARY.md  appsettings.Development.json  appsettings.json  bugs.md  deploy-list.json  footguns.md  guardrails.sh  instructions.md  package-lock.json  package.json  review.md  run-tests.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
BareMetalWeb.AI/: AdminAssistantService.cs  BareMetalWeb.AI.csproj  EntityDesignerTools.cs  QueryTools.cs
BareMetalWeb.API/: ApiRouteHandlers.cs  BareMetalWeb.API.csproj  IApiRouteHandlers.cs
BareMetalWeb.API.Tests/: BareMetalWeb.API.Tests.csproj  PlaceholderTests.cs  UnitTest1.cs
BareMetalWeb.Agent/: AgentConfig.cs  AgentJsonHelper.cs  AgentPollingService.cs  BareMetalWeb.Agent.csproj  DeviceIdentity.cs  NodeRegistrationService.cs  Program.cs  RuntimeProcessManager.cs
BareMetalWeb.Android/: README.md  settings.gradle
BareMetalWeb.Benchmarks/: BareMetalWeb.Benchmarks.csproj  ByteScannerBenchmarks.cs  HtmlRenderBenchmarks.cs  OutputCacheBenchmarks.cs  Program.cs  RouteMatchingBenchmarks.cs  SimdBenchmarks.cs  StorageIndexBenchmarks.cs  VectorDistanceBenchmarks.cs  WalCommitBenchmarks.cs
BareMetalWeb.BootstrapAgent/: BareMetalWeb.BootstrapAgent.csproj  Program.cs
BareMetalWeb.CLI/: BareMetalWeb.CLI.csproj  Program.cs
BareMetalWeb.ControlPlane/: BareMetalWeb.ControlPlane.csproj  ControlPlaneClient.cs  ControlPlaneJson.cs  ControlPlaneJsonHelper.cs  ControlPlaneService.cs  Models.cs  ObservabilityHealth.cs  TelemetryBuffer.cs
BareMetalWeb.Core/: BareMetalWeb.Core.csproj  BmwConfig.cs  (+28 more)
BareMetalWeb.Core.Tests/: BareMetalWeb.Core.Tests.csproj  TemplateLoopTests.cs  UnitTest1.cs
baremetalweb-native/: CMakeLists.txt  README.md
baremetalweb-native/include/: bmw_auth.h  bmw_compress.h  bmw_event_loop.h  bmw_http.h  bmw_meta.h  bmw_module.h  bmw_platform.h  bmw_wal.h  bmw_ws.h
baremetalweb-native/pico/: CMakeLists.txt  bmw_pico_lwip.c  bmw_pico_lwip.h  bmw_pico_main.c  build_pico.bat  build_pico_size.bat  gen_embedded.py  lwipopts.h
baremetalweb-native/pico/embedded/: bmw_embedded_files.c  bmw_embedded_files.h
baremetalweb-native/src/: main.c
baremetalweb-native/src/core/: buffer_pool.c  event_loop.c  module.c
baremetalweb-native/src/mod_auth/: auth_oidc.c
baremetalweb-native/src/mod_compress/: compress.c
baremetalweb-native/src/mod_http/: http_parser.c  http_router.c  http_server.c  http_static.c  http_template.c
baremetalweb-native/src/mod_meta/: meta_module.c
baremetalweb-native/src/mod_wal/: wal_engine.c  wal_module.c  wal_tcp.c
baremetalweb-native/src/mod_ws/: ws_module.c
baremetalweb-native/wwwroot/: BareMetal.Auth.js  BareMetal.Binary.min.js  BareMetal.Charts.min.js  BareMetal.Communications.min.js  BareMetal.ComponentFactories.min.js  BareMetal.Compress.min.js  BareMetal.Graph.min.js  BareMetal.Metadata.min.js  BareMetal.Progressive.js  BareMetal.Rendering.min.js  BareMetal.Routing.min.js  BareMetal.ServiceWorker.js  BareMetal.Template.min.js  BareMetalStyles.min.css  app-init.js  index.html
(+1001 files in other folders)
